# website.tools

./: .dockerignore  .env.example  .env.local  .gitattributes  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  RELEASE.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  ecosystem.config.js  eslint.config.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  server.js  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
nginx/: README.md  nginx.dev.conf  nginx.prod.conf.example
public/: llms.txt  manifest.webmanifest  sw.js
public/.well-known/: ai-plugin.json  security.txt
public/wasm/: website_tools_wasm.d.ts  website_tools_wasm.js
scripts/: prebuild.mjs  production-readiness.mjs  release.mjs  seo-audit.mjs  setup-cron.sh  sitemap-submitter.mjs
scripts/lib/: audit-utils.mjs
src/: proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/hooks/: use-file-security.ts
src/lib/: analytics.ts  api-security.ts  blog.ts  client-storage.ts  constants.ts  env.ts  file-cleanup.ts  file-security.ts  highlight-lazy.ts  math-lite.ts  preloader.ts  (+8 more)
tests/: a11y.spec.ts  api.spec.ts  security.spec.ts  snapshots.spec.ts  tools.spec.ts
tools.devstackio.com-Coverage-2026-07-15/: Chart.csv  Critical issues.csv
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
(+404 files in other folders)
