[package]
name = "website-tools-wasm"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", features = ["std"] }
urlencoding = "2"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hmac = "0.12"
hex = "0.4"
csv = "1"
flate2 = { version = "1", features = [] }
brotli = "3"
zip = { version = "0.6", features = ["deflate", "deflate-miniz"], default-features = false }
image = { version = "0.25", features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
qrcode = { version = "0.14", features = ["svg"] }
imageproc = "0.25"
uuid = { version = "=1.10.0", features = ["v4", "v1", "serde", "js"] }
regex = { version = "1", features = ["std"] }
walkdir = "2"
once_cell = "1"
getrandom = { version = "=0.2.15", features = ["js"] }

[profile.release]
opt-level = "z"
lto = false

[profile.dev]
opt-level = 0